# claims-project

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
data/input/: claims_data.csv  policyholder_data.csv
data/output/: processed_claims.csv
src/claims_processor/: hash_client.py  main.py  readers.py  schemas.py  transformations.py
tests/: conftest.py  test_hash_client.py  test_integration.py  test_transformations.py
