[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-processor"
version = "0.1.0"
description = "Insurance claims processing pipeline using PySpark"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyspark==3.5.8",
    "requests>=2.31.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "chispa>=0.10.1,<1.0.0",
    "requests-mock>=1.11.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]